--- a/devops/geoapi-services/docker-compose.yml
+++ b/devops/geoapi-services/docker-compose.yml
@@ -72,11 +72,11 @@ services:
     environment:
       - FLASK_APP=/app/geoapi/app.py
       - ASSETS_BASE_DIR=/assets
-      - DESIGNSAFE_URL={DESIGNSAFE_URL}
+      - DESIGNSAFE_URL=${DESIGNSAFE_URL}
       # from secrets.env
-      - FLASK_SESSION_SECRET_KEY={FLASK_SESSION_SECRET_KEY}
-      - TAPIS_CLIENT_ID={TAPIS_CLIENT_ID}
-      - TAPIS_CLIENT_KEY={TAPIS_CLIENT_KEY}
+      - FLASK_SESSION_SECRET_KEY=${FLASK_SESSION_SECRET_KEY}
+      - TAPIS_CLIENT_ID=${TAPIS_CLIENT_ID}
+      - TAPIS_CLIENT_KEY=${TAPIS_CLIENT_KEY}
     stdin_open: true
     tty: true
     container_name: geoapi
