--- a/devops/pyproject.toml
+++ b/devops/pyproject.toml
@@ -35,7 +35,7 @@ ExifRead = "^2.3.2"
 flake8 = "^5.0.4"
 urllib3 = "<2"
 pytest-mock = "^3.12.0"
-mapillary-tools = {git = "https://github.com/mapillary/mapillary_tools.git"}
+mapillary-tools = {git = "https://github.com/mapillary/mapillary_tools.git", rev = "4bfebf8"}
 
 [tool.poetry.dev-dependencies]
 
