Add restart nginx command

--- a/devops/geoapi-services/nginx.conf
+++ b/devops/geoapi-services/nginx.conf
@@ -38,15 +38,15 @@ http {
       large_client_header_buffers 2 50k;
 
       location / {
-           add_header "Access-Control-Allow-Origin"  *;
+          add_header 'Access-Control-Allow-Origin' '*' always;
 
           # Preflighted requests
-          if ($request_method = OPTIONS ) {
-              add_header "Access-Control-Allow-Origin"  *;
-              add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD, PUT, DELETE";
-              add_header "Access-Control-Allow-Headers" "*";
-              add_header 'Access-Control-Max-Age' 1728000;
-              add_header 'Content-Length' 0;
+          if ($request_method = 'OPTIONS') {
+              add_header 'Access-Control-Allow-Origin' '*' always;
+              add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, HEAD, PUT, DELETE' always;
+              add_header 'Access-Control-Allow-Headers' '*' always;
+              add_header 'Access-Control-Max-Age' 1728000 always;
+              add_header 'Content-Length' 0 always;
               return 204;
           }
           rewrite ^/api(.*) /$1 break;
