--- a/devops/local_conf/nginx.conf
+++ b/devops/local_conf/nginx.conf
@@ -37,19 +37,26 @@ http {
         }
 
         location /assets {
-            max_ranges 0;
+            alias /assets/;
             expires 30d;
-            add_header "Access-Control-Allow-Origin"  *;
+            add_header "Access-Control-Allow-Origin" * always;
+            add_header "Access-Control-Allow-Headers" * always;
+
+            # Allow range requests for .bin files for potree point clouds
+            location ~ \.bin$ {
+                types { } default_type text/plain;
+                add_header Content-Type "text/plain; charset=utf-8";
+                add_header Accept-Ranges bytes;
+            }
+
             # Preflighted requests
-            if ($request_method = OPTIONS ) {
-                add_header "Access-Control-Allow-Origin"  *;
-                add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD, PUT, DELETE";
-                add_header "Access-Control-Allow-Headers" "*";
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Length' 0;
+            if ($request_method = OPTIONS) {
+                add_header "Access-Control-Allow-Origin" "*" always;
+                add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD, PUT, DELETE" always;
+                add_header "Access-Control-Max-Age" "1728000" always;
+                add_header "Content-Length" "0" always;
                 return 204;
             }
-            alias /assets/;
         }
     }
 }
