Set Access-Control-Max-Age to 86400 as mas value for Firefox
Firefox had the longest max among browsers.

--- a/devops/geoapi-services/nginx.conf
+++ b/devops/geoapi-services/nginx.conf
@@ -45,7 +45,7 @@ http {
               add_header 'Access-Control-Allow-Origin' '*' always;
               add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, HEAD, PUT, DELETE' always;
               add_header 'Access-Control-Allow-Headers' '*' always;
-              add_header 'Access-Control-Max-Age' 1728000 always;
+              add_header 'Access-Control-Max-Age' 86400 always;
               add_header 'Content-Length' 0 always;
               return 204;
           }
@@ -70,7 +70,7 @@ http {
               add_header "Access-Control-Allow-Origin"  *;
               add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD, PUT, DELETE";
               add_header "Access-Control-Allow-Headers" "*";
-              add_header 'Access-Control-Max-Age' 1728000;
+              add_header 'Access-Control-Max-Age' 86400;
               add_header 'Content-Length' 0;
               return 204;
           }
