Update deployed nginx.conf to allow range requests for potree bin files

--- a/devops/geoapi-services/nginx.conf
+++ b/devops/geoapi-services/nginx.conf
@@ -61,21 +61,27 @@ http {
       }
 
       location /assets {
-          max_ranges 0;
+          alias /assets/;
           expires 30d;
           add_header "Access-Control-Allow-Origin"  *;
+          add_header "Access-Control-Allow-Headers" * always;
+
+          # Allow range requests for .bin files for potree point clouds
+          location ~ \.bin$ {
+              types { } default_type text/plain;
+              add_header Content-Type "text/plain; charset=utf-8";
+              add_header Accept-Ranges bytes;
+          }
 
           # Preflighted requests
           if ($request_method = OPTIONS ) {
               add_header "Access-Control-Allow-Origin"  *;
               add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD, PUT, DELETE";
-              add_header "Access-Control-Allow-Headers" "*";
               add_header 'Access-Control-Max-Age' 1728000;
               add_header 'Content-Length' 0;
               return 204;
           }
 
-          alias /assets/;
       }
     }
 }
