--- a/devops/local_conf/nginx.conf
+++ b/devops/local_conf/nginx.conf
@@ -45,10 +45,11 @@ http {
             add_header "Access-Control-Allow-Headers" * always;
 
             # Allow range requests for .bin files for potree point clouds
+            #   Also, disable gzip for .bin files as it causes some browsers
+            #   to send entire compressed file
             location ~ \.bin$ {
-                types { } default_type text/plain;
-                add_header Content-Type "text/plain; charset=utf-8";
                 add_header Accept-Ranges bytes;
+                gzip off;
             }
 
             # Preflighted requests
