Unify how some settings are set

--- a/devops/geoapi-services/nginx.conf
+++ b/devops/geoapi-services/nginx.conf
@@ -63,7 +63,7 @@ http {
       location /assets {
           alias /assets/;
           expires 30d;
-          add_header "Access-Control-Allow-Origin"  *;
+          add_header "Access-Control-Allow-Origin"  * always;
           add_header "Access-Control-Allow-Headers" * always;
 
           # Allow range requests for .bin files for potree point clouds
@@ -76,10 +76,10 @@ http {
 
           # Preflighted requests
           if ($request_method = OPTIONS ) {
-              add_header "Access-Control-Allow-Origin"  *;
-              add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD, PUT, DELETE";
-              add_header 'Access-Control-Max-Age' 86400;
-              add_header 'Content-Length' 0;
+              add_header "Access-Control-Allow-Origin" * always;
+              add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD, PUT, DELETE" always;
+              add_header "Access-Control-Max-Age" 86400 always;
+              add_header "Content-Length" "0" always;
               return 204;
           }
 
