--- a/devops/geoapi-workers/docker-compose.yml
+++ b/devops/geoapi-workers/docker-compose.yml
@@ -18,7 +18,12 @@ services:
       driver: syslog
       options:
         tag: geoapi_workers
-    command: "celery -A geoapi.celery_app worker -l info"
+    command:  >
+      sh -c '
+      celery -A geoapi.celery_app worker -l info -Q default -n default_worker@geoapi &
+      celery -A geoapi.celery_app worker -l info -Q heavy --concurrency=6 -n heavy_worker@geoapi &
+      wait
+      '
 
   watchtower:
     image: containrrr/watchtower:1.7.1
