task/WG-285: update potree converter (#218)
* Rework worker Dockerfile and bump PotreeConverter

* Fix docker compose commands

* Update and improve custom html template

* Activate conda when starting bash on running container

* Add an additional test

* Improve nginx.conf to allow range requests for potree bin files

* Fix adding of nsf_logo.png

* Fix unit test

* Add vim package

* Do not need to install laszip

* Clean up dockerfile

* Update deployed nginx.conf to allow range requests for potree bin files

* Simplify entrypoint script

* Refactor oder of Dockerfile

* Fix nginx.conf so range requests work on Firefox

* Remove unused background image in template

Also, fixes nsf log snippet application.

* Improve comment

* Fix PYTHONPATH

* Fix .bin settings

* Unify how some settings are set

* Lower max body size

This was high as we used to support direct file upload instead of using TAPIS

* Improve error handling to log memory issues

--- a/devops/local_conf/nginx.conf
+++ b/devops/local_conf/nginx.conf
@@ -12,7 +12,7 @@ http {
 
     server {
         include /etc/nginx/mime.types;
-        client_max_body_size 10g;
+        client_max_body_size 1g;
 
         location / {
             add_header 'Access-Control-Allow-Origin' '*' always;
@@ -39,20 +39,27 @@ http {
         }
 
         location /assets {
-            max_ranges 0;
+            alias /assets/;
             expires 30d;
-            add_header 'Access-Control-Allow-Origin' '*';
+            add_header "Access-Control-Allow-Origin" * always;
+            add_header "Access-Control-Allow-Headers" * always;
+
+            # Allow range requests for .bin files for potree point clouds
+            #   Also, disable gzip for .bin files as it causes some browsers
+            #   to send entire compressed file
+            location ~ \.bin$ {
+                add_header Accept-Ranges bytes;
+                gzip off;
+            }
 
             # Preflighted requests
-            if ($request_method = OPTIONS ) {
-                add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, HEAD, PUT, DELETE';
-                add_header 'Access-Control-Allow-Headers' '*';
-                add_header 'Access-Control-Max-Age' 86400;
-                add_header 'Content-Length' 0;
+            if ($request_method = OPTIONS) {
+                add_header "Access-Control-Allow-Origin" "*" always;
+                add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD, PUT, DELETE" always;
+                add_header "Access-Control-Max-Age" "86400" always;
+                add_header "Content-Length" "0" always;
                 return 204;
             }
-            alias /assets/;
         }
     }
 }
