--- a/devops/geoapi-services/nginx.conf
+++ b/devops/geoapi-services/nginx.conf
@@ -61,21 +61,28 @@ http {
       }
 
       location /assets {
-          max_ranges 0;
+          alias /assets/;
           expires 30d;
-          add_header "Access-Control-Allow-Origin"  *;
+          add_header "Access-Control-Allow-Origin"  * always;
+          add_header "Access-Control-Allow-Headers" * always;
+
+          # Allow range requests for .bin files for potree point clouds
+          #   Also, disable gzip for .bin files as it causes some browsers
+          #   to send entire compressed file
+          location ~ \.bin$ {
+              add_header Accept-Ranges bytes;
+              gzip off;
+          }
 
           # Preflighted requests
           if ($request_method = OPTIONS ) {
-              add_header "Access-Control-Allow-Origin"  *;
-              add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD, PUT, DELETE";
-              add_header "Access-Control-Allow-Headers" "*";
-              add_header 'Access-Control-Max-Age' 86400;
-              add_header 'Content-Length' 0;
+              add_header "Access-Control-Allow-Origin" * always;
+              add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD, PUT, DELETE" always;
+              add_header "Access-Control-Max-Age" 86400 always;
+              add_header "Content-Length" "0" always;
               return 204;
           }
 
-          alias /assets/;
       }
     }
 }
