--- a/devops/pyproject.toml
+++ b/devops/pyproject.toml
@@ -2,44 +2,58 @@
 name = "geoapi"
 version = "2.5"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["DesignSafe-CI <designsafe-ci@tacc.utexas.edu>"]
+readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.11"
 celery = "5.2.3"
 alembic = "^1"
 GeoAlchemy2 = "0.11.1"
 geojson = "2.5.0"
+SQLAlchemy = "^1.3.13"
+gevent = "^24.11.1"
+psycopg2 = "^2.9.3"
+configparser = "^5.2.0"
+sqlalchemy-utils = "^0.41.2"
+
+[tool.poetry.group.worker]
+optional = true
+
+[tool.poetry.group.worker.dependencies]
 ffmpeg-python = "^0.2.0"
 geopandas = "^0.10.2"
-PyJWT = "^2.0.0"
 pyproj = "^3.3.0"
-pytest = "^5.3.5"
-pytest-cov = "^2.8.1"
 Shapely = "^1.8"
-SQLAlchemy = "^1.3.13"
 Pillow = "^9.2.0"
-Fiona = "1.8.21"
+Fiona = "1.10.1"
+laspy = "1.6.0"
+ExifRead = "^2.3.2"
+mapillary-tools = "0.9.5"
+
+[tool.poetry.group.flask]
+optional = true
+
+[tool.poetry.group.flask.dependencies]
+PyJWT = "^2.0.0"
 gunicorn = "^20.1.0"
-gevent = "^21.12.0"
 Flask = "^2.1.2"
 Werkzeug = "2.1.2"
 flask-restx = "^0.5.1"
-psycopg2 = "^2.9.3"
 requests = "^2.29.0"
-laspy = "1.6.0"
-configparser = "^5.2.0"
 cryptography = "^37.0.2"
-requests-mock = "^1.10.0"
-ExifRead = "^2.3.2"
-flake8 = "^5.0.4"
 urllib3 = "<2"
-pytest-mock = "^3.12.0"
-mapillary-tools = "0.9.5"
-sqlalchemy-utils = "^0.41.2"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev]
+optional = true
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^5.0.4"
+pytest = "^5.3.5"
+pytest-cov = "^2.8.1"
+pytest-mock = "^3.12.0"
+requests-mock = "^1.10.0"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
