--- a/devops/pyproject.toml
+++ b/devops/pyproject.toml
@@ -7,13 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-celery = "5.2.3"
+celery = "^5.4.0"
 alembic = "^1"
 GeoAlchemy2 = "0.11.1"
 geojson = "2.5.0"
 SQLAlchemy = "^1.3.13"
 gevent = "^24.11.1"
-psycopg2 = "^2.9.3"
+psycopg2 = "^2.9.10"
 configparser = "^5.2.0"
 sqlalchemy-utils = "^0.41.2"
 
@@ -36,11 +36,11 @@ optional = true
 
 [tool.poetry.group.flask.dependencies]
 PyJWT = "^2.0.0"
-gunicorn = "^20.1.0"
+gunicorn = "^23.0.0"
 Flask = "^2.1.2"
-Werkzeug = "2.1.2"
+Werkzeug = "^3.1.3"
 flask-restx = "^0.5.1"
-requests = "^2.29.0"
+requests = "^2.32.3"
 cryptography = "^37.0.2"
 urllib3 = "<2"
 
@@ -48,11 +48,11 @@ urllib3 = "<2"
 optional = true
 
 [tool.poetry.group.dev.dependencies]
-flake8 = "^5.0.4"
-pytest = "^5.3.5"
-pytest-cov = "^2.8.1"
-pytest-mock = "^3.12.0"
-requests-mock = "^1.10.0"
+flake8 = "^7.1.1"
+pytest = "^8.3.3"
+pytest-cov = "^6.0.0"
+pytest-mock = "^3.14.0"
+requests-mock = "^1.12.1"
 
 [build-system]
 requires = ["poetry-core"]
