--- a/devops/pyproject.toml
+++ b/devops/pyproject.toml
@@ -3,46 +3,44 @@ name = "geoapi"
 version = "2.5"
 description = ""
 authors = ["DesignSafe-CI <designsafe-ci@tacc.utexas.edu>"]
-readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
-celery = "^5.4.0"
 alembic = "^1"
-GeoAlchemy2 = "0.11.1"
-geojson = "2.5.0"
-SQLAlchemy = "^1.3.13"
-gevent = "^24.11.1"
-psycopg2 = "^2.9.10"
-configparser = "^5.2.0"
-sqlalchemy-utils = "^0.41.2"
-
-[tool.poetry.group.worker]
-optional = true
-
-[tool.poetry.group.worker.dependencies]
+celery = "^5.4.0"
 ffmpeg-python = "^0.2.0"
-geopandas = "^0.10.2"
-pyproj = "^3.3.0"
-Shapely = "^1.8"
-Pillow = "^9.2.0"
-Fiona = "1.10.1"
-laspy = "1.6.0"
-ExifRead = "^2.3.2"
-mapillary-tools = "0.9.5"
+GeoAlchemy2 = "^0.16.0"
+geojson = "^3.1.0"
+psycopg2-binary = "^2.9.10"
+sqlalchemy = "^2.0.36"
+sqlalchemy-utils = "^0.41.2"
 
 [tool.poetry.group.flask]
 optional = true
 
 [tool.poetry.group.flask.dependencies]
-PyJWT = "^2.0.0"
+cryptography = "^43.0.3"
+flask = "^3.1.0"
+flask-restx = "^1.3.0"
+gevent = "^24.11.1"
 gunicorn = "^23.0.0"
-Flask = "^2.1.2"
-Werkzeug = "^3.1.3"
-flask-restx = "^0.5.1"
+PyJWT = "^2.9.0"
 requests = "^2.32.3"
-cryptography = "^37.0.2"
-urllib3 = "<2"
+urllib3 = "^2.2.3"
+
+[tool.poetry.group.worker]
+optional = true
+
+[tool.poetry.group.worker.dependencies]
+ExifRead = "^2.3.2"
+Fiona = "1.10.1"
+geopandas = "^0.10.2"
+laspy = "1.6.0"
+mapillary-tools = "0.9.5"
+Pillow = "^9.2.0"
+pyproj = "^3.3.0"
+Shapely = "^1.8"
 
 [tool.poetry.group.dev]
 optional = true
