--- a/devops/pyproject.toml
+++ b/devops/pyproject.toml
@@ -15,6 +15,7 @@ geojson = "^3.1.0"
 psycopg2-binary = "^2.9.10"
 sqlalchemy = "^2.0.36"
 sqlalchemy-utils = "^0.41.2"
+ipython = "^8.29.0"
 
 [tool.poetry.group.flask]
 optional = true
