update test; add rabbitmq healthcheck

--- a/devops/docker-compose.local.yml
+++ b/devops/docker-compose.local.yml
@@ -9,13 +9,18 @@ networks:
 services:
 
   rabbitmq:
-    image: rabbitmq:3.12.6
+    image: rabbitmq:3-management
     networks:
       - geoapi
     environment:
       - RABBITMQ_DEFAULT_USER=dev
       - RABBITMQ_DEFAULT_PASS=dev
       - RABBITMQ_DEFAULT_VHOST=dev
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 5s
+      timeout: 30s
+      retries: 5
 
   postgres:
     image: postgis/postgis:11-3.0-alpine
@@ -65,6 +70,9 @@ services:
       celery -A geoapi.celery_app worker -l info -Q heavy --concurrency=6 -n heavy_worker@geoapi &
       wait
       '
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
 
   celerybeat:
     image: taccaci/geoapi-workers:local
@@ -83,6 +91,9 @@ services:
     container_name: geoapicelerybeat
     hostname: geoapicelerybeat
     command: "celery -A geoapi.celery_app beat -l info"
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
 
   api:
     image: taccaci/geoapi:local
