--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,14 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
-      - name: Install flake8 and black
-        run: pip install flake8 black
+          python-version: 3.11
+      - name: Install flake8
+        run: pip install flake8
       - name: Run flake8
         run: flake8 geoapi
       - name: Formatting with black
         run: |
-          black --check .
+          poetry run black --check .
 
   Geoapi_Unit_Tests:
     runs-on: ubuntu-latest
@@ -46,7 +46,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: 3.11
       - name: Install ffmpeg
         run: |
           sudo apt-get update
