--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
-      - name: Install flake8
-        run: pip install flake8
       - name: Run flake8
-        run: flake8 geoapi
+        run: poetry run flake8 geoapi
       - name: Formatting with black
         run: |
-          poetry run black --check .
+          poetry run black --check geoapi
 
   Geoapi_Unit_Tests:
     runs-on: ubuntu-latest
