--- a/devops/docker-compose.local.yml
+++ b/devops/docker-compose.local.yml
@@ -10,6 +10,8 @@ services:
 
   rabbitmq:
     image: rabbitmq:3-management
+    ports:
+      - 15672:15672
     networks:
       - geoapi
     environment:
