task/WG-379: upgrade python to 3.11; reorg Dockerfiles; reorg `pyproject.toml` (first pass) (#222)
* upgrade python to 3.11; reorg Dockerfiles; reorg pyproject

* update github actions to 3.11; formatting

* gh actions dev dependenceis

* upgrade packages

* move laspy to main group; fix conda env name

* fix tests

* fix packages

* fix initdb

* upgrade packages; update import

* resolve sqalchemy warnings

* sqlalchemy 2.x syntax

* laspy upgrades

* update test; add rabbitmq healthcheck

* use poetry flake8 and black

* update workflows

* Update devops/docker-compose.local.yml

Co-authored-by: Nathan Franklin <nathan.franklin@gmail.com>

* add make build-dev instruction to readme

* Update devops/docker-compose.local.yml

Co-authored-by: Nathan Franklin <nathan.franklin@gmail.com>

* update gh action pg

* add lazrs

---------

Co-authored-by: Nathan Franklin <nathan.franklin@gmail.com>

--- a/devops/docker-compose.local.yml
+++ b/devops/docker-compose.local.yml
@@ -9,16 +9,23 @@ networks:
 services:
 
   rabbitmq:
-    image: rabbitmq:3.12.6
+    image: rabbitmq:3-management
+    ports:
+      - 15672:15672
     networks:
       - geoapi
     environment:
       - RABBITMQ_DEFAULT_USER=dev
       - RABBITMQ_DEFAULT_PASS=dev
       - RABBITMQ_DEFAULT_VHOST=dev
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 5s
+      timeout: 30s
+      retries: 5
 
   postgres:
-    image: mdillon/postgis:11-alpine
+    image: postgis/postgis:11-3.3-alpine
     volumes:
       - pgdata:/var/lib/postgresql/data
     networks:
@@ -65,6 +72,9 @@ services:
       celery -A geoapi.celery_app worker -l info -Q heavy --concurrency=6 -n heavy_worker@geoapi &
       wait
       '
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
 
   celerybeat:
     image: taccaci/geoapi-workers:local
@@ -83,6 +93,9 @@ services:
     container_name: geoapicelerybeat
     hostname: geoapicelerybeat
     command: "celery -A geoapi.celery_app beat -l info"
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
 
   api:
     image: taccaci/geoapi:local
