--- a/devops/docker-compose.local.yml
+++ b/devops/docker-compose.local.yml
@@ -9,23 +9,16 @@ networks:
 services:
 
   rabbitmq:
-    image: rabbitmq:3-management
-    ports:
-      - 15672:15672
+    image: rabbitmq:3.12.6
     networks:
       - geoapi
     environment:
       - RABBITMQ_DEFAULT_USER=dev
       - RABBITMQ_DEFAULT_PASS=dev
       - RABBITMQ_DEFAULT_VHOST=dev
-    healthcheck:
-      test: rabbitmq-diagnostics -q ping
-      interval: 5s
-      timeout: 30s
-      retries: 5
 
   postgres:
-    image: postgis/postgis:11-3.3-alpine
+    image: mdillon/postgis:11-alpine
     volumes:
       - pgdata:/var/lib/postgresql/data
     networks:
@@ -72,9 +65,6 @@ services:
       celery -A geoapi.celery_app worker -l info -Q heavy --concurrency=6 -n heavy_worker@geoapi &
       wait
       '
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
 
   celerybeat:
     image: taccaci/geoapi-workers:local
@@ -93,9 +83,6 @@ services:
     container_name: geoapicelerybeat
     hostname: geoapicelerybeat
     command: "celery -A geoapi.celery_app beat -l info"
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
 
   api:
     image: taccaci/geoapi:local
