--- a/devops/local_conf/nginx.conf
+++ b/devops/local_conf/nginx.conf
@@ -10,51 +10,54 @@ http {
     gzip_types *;
     gzip_min_length 250;
 
-    upstream api_backend {
+    upstream geoapi_backend {
         ip_hash;
-
-        server 127.0.0.1:8000;
-        server 127.0.0.1:8001;
-        server 127.0.0.1:8002;
-        server 127.0.0.1:8003;
+        server geoapi-backend-1:8000;
+        server geoapi-backend-2:8000;
+        server geoapi-backend-3:8000;
+        server geoapi-backend-4:8000;
         # to scale the app, just add more nodes here!
     }
 
+    keepalive_timeout 65;
+
     server {
-        listen 80;
 
         include /etc/nginx/mime.types;
         client_max_body_size 1g;
 
         location / {
-            # add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Origin' '*' always;
 
-            # # Preflighted requests
-            # if ($request_method = OPTIONS ) {
-            #     add_header 'Access-Control-Allow-Origin' '*' always;
-            #     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, HEAD, PUT, DELETE' always;
-            #     add_header 'Access-Control-Allow-Headers' '*' always;
-            #     add_header 'Access-Control-Max-Age' 86400 always;
-            #     add_header 'Content-Length' 0 always;
-            #     return 204;
-            # }
+            # Preflighted requests
+            if ($request_method = OPTIONS ) {
+                add_header 'Access-Control-Allow-Origin' '*' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, HEAD, PUT, DELETE' always;
+                add_header 'Access-Control-Allow-Headers' '*' always;
+                add_header 'Access-Control-Max-Age' 86400 always;
+                add_header 'Content-Length' 0 always;
+                return 204;
+            }
 
-            # rewrite ^/api(.*) /$1 break;
-            proxy_pass http://api_backend;
+            rewrite ^/api(.*) /$1 break;
+            proxy_pass http://geoapi_backend;
+            proxy_send_timeout 100s;
+            proxy_read_timeout 100s;
 
+            proxy_buffering off;
             proxy_redirect off;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
 
             proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+            # proxy_cache_bypass $http_upgrade;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         location /socket.io {
-            proxy_pass http://api_backend/socket.io;
+            proxy_pass http://geoapi_backend/socket.io;
             proxy_http_version 1.1;
             proxy_buffering off;
             proxy_set_header Upgrade $http_upgrade;
