--- a/devops/docker-compose.local.yml
+++ b/devops/docker-compose.local.yml
@@ -4,16 +4,12 @@ volumes:
   assets:
   pgdata:
 
-networks:
-  geoapi:
-
 services:
   redis:
     image: redis:7-bookworm
     command: redis-server --loglevel warning
-    networks:
-      - geoapi
     container_name: geoapi_redis
+    hostname: geoapi_redis
     healthcheck:
       test: redis-cli ping
       interval: 5s
@@ -24,8 +20,8 @@ services:
     image: rabbitmq:4-management
     ports:
       - 15672:15672
-    networks:
-      - geoapi
+    container_name: geoapi_rabbitmq
+    hostname: geoapi_rabbitmq
     environment:
       - RABBITMQ_DEFAULT_USER=dev
       - RABBITMQ_DEFAULT_PASS=dev
@@ -40,8 +36,6 @@ services:
     image: postgis/postgis:11-3.3-alpine
     volumes:
       - pgdata:/var/lib/postgresql/data
-    networks:
-      - geoapi
     container_name: geoapi_postgres
     hostname: geoapi_postgres
     environment:
@@ -56,15 +50,12 @@ services:
     volumes:
       - assets:/assets
       - ./local_conf/nginx.conf:/etc/nginx/nginx.conf
-    networks:
-      - geoapi
+    container_name: geoapi_nginx
     depends_on:
       - backend
 
   workers:
     image: taccaci/geoapi-workers:local
-    networks:
-      - geoapi
     volumes:
       - ../:/app
       - assets:/assets
@@ -77,8 +68,8 @@ services:
 
     stdin_open: true
     tty: true
-    container_name: geoapiworkers
-    hostname: geoapiworkers
+    container_name: geoapi_workers
+    hostname: geoapi_workers
     command: >
       sh -c '
       celery -A geoapi.celery_app worker -l info -Q default -n default_worker@geoapi --uid=nobody --gid=nogroup &
@@ -91,8 +82,6 @@ services:
 
   celerybeat:
     image: taccaci/geoapi-workers:local
-    networks:
-      - geoapi
     volumes:
       - ../:/app
       - assets:/assets
@@ -101,8 +90,8 @@ services:
       - FLASK_APP=/app/geoapi/app.py
       - APP_ENV=local
       - ASSETS_BASE_DIR=/assets
-    container_name: geoapicelerybeat
-    hostname: geoapicelerybeat
+    container_name: geoapi_celerybeat
+    hostname: geoapi_celerybeat
     command: "celery -A geoapi.celery_app beat -l info --uid=nobody --gid=nogroup"
     depends_on:
       rabbitmq:
@@ -110,8 +99,6 @@ services:
 
   backend:
     image: taccaci/geoapi:local
-    networks:
-      - geoapi
     volumes:
       - ../:/app
       - assets:/assets
@@ -129,7 +116,7 @@ services:
     stdin_open: true
     tty: true
     scale: 4
-    hostname: geoapi
+    hostname: geoapi_backend
     command: "gunicorn -w 1 -b 0.0.0.0:8000 geoapi.app:app -k geventwebsocket.gunicorn.workers.GeventWebSocketWorker --reload --timeout 300"
     extra_hosts:
       - "host.docker.internal:host-gateway"
