Add project auth check for /assets acccess

--- a/devops/local_conf/nginx.conf
+++ b/devops/local_conf/nginx.conf
@@ -10,6 +10,12 @@ http {
     gzip_types *;
     gzip_min_length 250;
 
+    # Map URI → project ID when using assets route (for auth checking)
+    map $request_uri $project_id {
+        ~^/assets/(\d+)/  $1;
+        default           "";
+    }
+
     server {
         include /etc/nginx/mime.types;
         client_max_body_size 1g;
@@ -39,6 +45,9 @@ http {
         }
 
         location /assets {
+            # Call geoapi to check access before serving file
+            auth_request /auth-check;
+
             alias /assets/;
             expires 30d;
             add_header "Access-Control-Allow-Origin" * always;
@@ -60,6 +69,21 @@ http {
                 add_header "Content-Length" "0" always;
                 return 204;
             }
+        }
+
+        location = /auth-check {
+            internal;
+
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Headers *;
+
+            proxy_pass http://geoapi:8000/projects/$project_id/check-access/;
+
+            proxy_pass_request_body off;
+            proxy_set_header Content-Length "";
+
+            proxy_set_header X-Tapis-Token $http_x_tapis_token;
+            proxy_set_header X-Original-URI $request_uri;
         }
     }
 }
